tests/call/nil.out
[31merror[error]: 'NoneType' object is not callable
----- Traceback -----
  ┌─ <unknown>:1:6
  | 
1 | None()
  |       ^
[0m